# mcp_gcal

./: .gitignore  .goosehints  README.md  pyproject.toml
.buildkite/: pipeline.yaml
src/mcp_gcal/: __init__.py  __main__.py  quickstart.py  server.py
