[project]
name = "mcp_gcal"
version = "0.1.0"
description = "MCP Server for mcp_gcal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "requests>=2.28.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.4.6",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
mcp_gcal = "mcp_gcal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
native-tls = true

